includes/modules/bookings/css/bookings.scss
@use '../../../css/scss/global' as *;

.booking-data-wrapper{
    display: inline-block;
}

.tables-wrapper{
    width: 100vw;
    z-index: 99;
    position: relative;

    .form-data-table{
        .bookings-wrap{
            display: flex;
            justify-content: center;

            .booking.overview{
                width: 500px;
            }
            
            .booking.details-wrapper{
                width: 500px;
                margin-top: 20px;
            }

        }
    }

    .selected{
        cursor: pointer;
    }
}

.calendar.day{
    &:not(.selected, .startdate, .enddate, .unavailable):hover, &.inbetween{
        background-color: $primary_color;
        color: white;
        border-radius: 30px;
    }

    &.startdate{
        background: linear-gradient(to right,rgba(189, 41, 25, 1) 0%, rgba(189, 41, 25, 1) 30%, rgba(189, 41, 25, 0.7) 100%);
        color: white;
        border-bottom-left-radius: 30px;
        border-top-left-radius: 30px;
    } 

    &.enddate{
        background: linear-gradient(to right,rgba(189, 41, 25, 0.7) 0%, rgba(189, 41, 25, 1) 70%, rgba(189, 41, 25, 1) 100%);
        color: white;
        border-bottom-right-radius: 30px;
        border-top-right-radius: 30px;
    }

    &.inbetween{
        border-radius: unset;
        opacity: 0.7;
    }

    .selected{
        cursor: pointer;
    }
}

.actions{
    height: 50px;

    button.action{
        
        float: right;

        border-radius: 10px;

        &.disabled{
            background-color: #ddd;
        }
    }
}

button.change-booking-date{
    height: fit-content;
}

.selected-booking-dates{
    display: flex;
    align-items: center;
}

.unavailable{
    color: rgb(176, 176, 176) !important;
    font-weight: 400 !important;
}

.selected{
    color: rgb(176, 176, 176) !important;
    font-weight: 400 !important;

    &:before {
        content: " ";
        display: block;
        height: 2px;
        width: 38px;
        position: absolute;
        top: 50%;
        left: 0;
        background: $primary_color;
    }
}

@media screen and (max-width: $mobilewidth){
    .booking.modal .modal-content{
        margin: 0px;
    }
}

@media (min-width: $fullwidth){
    .booking.modal .modal-content{
        margin: 10px auto;
        max-width: min(600px,100%);
    }
}

.booking-icon{
    height: 30px;
    margin-right: 5px;
}

article.booking{
    width: 100%;

    @media (min-width: $fullwidth){
        .description{
            width: 66%;
            min-width: 500px;
            float: left;
        }

        .metas{
            width: 33%;
            float: left;
        }
    }
    
    .booking-meta{
        &>div{
            margin-bottom: 12px;
            background: #f7f7f7;
            padding: 12px 14px 8px;
        }

        h4{
            display: inline;
            margin: 0px;
            color: black;
        }

        dd{
            font-size: 14px;
            color: #8d8d8d;
            margin: 0;
            padding-left: 35px;
        }
    }       
}


.bookings-wrap{
    @media (min-width: $fullwidth){
        overflow: auto;
    }
    @media (max-width: $fullwidth){
        margin-top: 20px;
    }
}

.navigators{
    min-height: 30px;
}
.navigator{
    text-align: center;
    border: none;

    a{
        color: $primary_color;
        color: #a9a9a9;
        font-size: 12px;
        font-weight: 400;
        letter-spacing: 1px;
        text-transform: uppercase;
        padding: 10px;
        cursor: pointer;

        span{
            color: $primary_color;
        }
    }

    .prev{
        float: left;
        a{
            @media (max-width: 766px){
                border: none;
            }
        }
        
    }

    .next{
        float: right;

        a{
            @media (max-width: 766px){
                border: none;
            }
        }
    }

    div{
        display: inline-block;
    }
}

.overview{
    /*width: 100%;*/

    @media (min-width: $fullwidth){
        float: left;
        margin-right: 40px;
    }

    .calendar.table{
        text-align: center;
        font-weight: 400;
        color: #626262;
        width: fit-content;
        margin: 5px auto;
        display: flex;

        @media (max-width: $mobilewidth){
            width: 100%;
            flex-wrap: wrap;
            justify-content: center;
        }

        .month-container{
            margin-right: 20px;
        }

        .current{
            font-weight: 700;
            text-transform: uppercase;
            @media (min-width: $tabletwidth){
                margin-top: 20px;
                font-size: 22px;
            }
            @media (max-width: 766px){
                margin-top: 20px;
            }
        }
    }

    dt{
        display: table-cell;
        color: #4d4d4d;
        background: #fff;
        font-size: 14px;
        width: 40px;
        height: 40px;
        text-align: center;
        position: relative;
        vertical-align: middle;
    }
}

.details-wrapper{        
    /* height: 522px; */
    padding: 0px 40px;
    width: 100%;
    @media (max-width: $tabletwidth){
        width: 100%;
    }
    display: inline-block;

    .booking-title{
        text-align: center;
        font-size: 11px;
        text-transform: uppercase;
        letter-spacing: 3px;
        margin-bottom: 14px;

        .day{
            width: 46px;
            height: 46px;
            margin: 0 auto 20px;
            position: relative;
            text-align: center;
            line-height: 46px;
            border: 1px solid $primary_color;
            border-top-color: $primary_color;
            border-right-color: $primary_color;
            border-bottom-color: $primary_color;
            border-left-color: $primary_color;
            border-radius: 50%;
            font-size: 12px;
            font-weight: 600;
            padding: 0;
        }
    }

    article{
        .booking-image{
            margin-right: 20px;
            width: 65px;
        }

        .booking-time{
            font-size: 11px;
            line-height: 1.1;
            margin: 0;

            .booking_icon{
                height: 15px;
            }
        }

        .booking-title{
            font-size: 20px;
        }
        .booking_icon{
            height: 20px;
        }

        .booking-detail{
            >div{
                margin-bottom: 10px;
            }

            table, tr, td{
                border: none;
            }
        }        
    }
}


.booking-date-wrapper {
    -webkit-box-align: start !important;
    -webkit-box-pack: justify !important;
    display: flex !important;
    justify-content: space-between !important;
    align-items: flex-start !important;
    padding-bottom: 16px !important;
}


.booking-dates-input-wrapper {
    flex: 1 0 0% !important;
    order: 2 !important;
    margin-left: 24px !important;
    display: block !important;
}

._h0i9fjw {
    display: flex !important;
    border-radius: 8px !important;
    background-color: rgb(247, 247, 247) !important;
    box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
}

.booking-date-label-wrapper {
    position: relative !important;
    cursor: text !important;
    display: flex !important;
    min-height: 56px !important;
    width: 100% !important;
    margin: 0px !important;
    border: none transparent !important;
    color: rgb(34, 34, 34) !important;
    border-radius: 8px !important;
    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
    font-size: 16px !important;
    line-height: 20px !important;
    font-weight: 400 !important;
    flex: 1 1 0% !important;
    outline: none !important;
    box-shadow: rgb(34 34 34) 0px 0px 0px 2px inset !important;
    background-color: rgb(255, 255, 255) !important;

    &.disabled {
        opacity: 1 !important;
        cursor: not-allowed !important;
        background-color: transparent !important;
        box-shadow: none !important;
        color: rgb(221, 221, 221) !important;
        -webkit-text-fill-color: rgb(221, 221, 221) !important;
    }
}

.booking-date-label {
    position: relative !important;
    flex: 1 1 0% !important;
    padding: 0px !important;
}

.booking-date-label-text {
    position: absolute !important;
    top: 12px !important;
    left: 12px !important;
    right: 12px !important;
    margin: 0px !important;
    padding: 0px !important;
    pointer-events: none !important;
    font-size: 10px !important;
    line-height: 12px !important;
    color: rgb(34, 34, 34) !important;
    text-transform: uppercase !important;
    font-weight: 800 !important;
    max-width: 100% !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
    white-space: nowrap !important;
}

.disabled .booking-date-label-text {
    color: rgb(113, 113, 113) !important;
}

.booking-date-label-input-wrapper {
    display: flex !important;
    opacity: 1 !important;
    font-size: 14px !important;
    line-height: 18px !important;
    color: rgb(34, 34, 34) !important;
}

.diabled .booking-date-label-input-wrapper {
    color: rgb(176, 176, 176) !important;
}

.booking-date-label-input {
    width: 100% !important;
    border: none !important;
    outline: none !important;
    padding: 0px !important;
    margin: 26px 12px 6px !important;
    min-height: 1px !important;
    color: inherit !important;
    background-color: transparent !important;
    font-family: inherit !important;
    font-size: inherit !important;
    font-weight: inherit !important;
    line-height: inherit !important;
    appearance: none !important;
}

.instructions-wrapper {
    flex: 1 1 0% !important;
    order: 1 !important;
}

@media (min-width: 1128px){
    .dir.sewcpu6[class][class] {
        padding-bottom: calc( var(--spacingBottomLargeAndAbove,var(--spacingBottom)) * var(--fgg-f-l-a) );
    }
}

@media (min-width: 744px){
    .dir.sewcpu6[class][class] {
        padding-bottom: calc( var(--spacingBottomMediumAndAbove,var(--spacingBottom)) * var(--fgg-f-l-a) );
    }

    .dir.sewcpu6[class][class] {
        padding-bottom: calc(var(--spacingBottom) * var(--fgg-f-l-a));
    }
}

















.dir.hnwb2pb[class][class] {
    margin: 0;
    padding: 0;
}

.hnwb2pb[class][class] {
    color: inherit;
    font-size: 1em;
    font-weight: inherit;
    line-height: inherit;
}

.dir.s1bh1tge[class][class] {
    padding-top: var(--fgg-f-l-a);
}
.s1bh1tge[class][class] {
    color: var(--fo-jk-r-s);
    font-family: var(--e-ls-qkw);
    font-weight: var(--e-y-j-d-v-j);
    font-size: var(--c-zdwk-p);
    line-height: var(--j-p-z-kco);
}

@supports (overflow: clip){
._uxnsba {
    overflow: clip !important;
}
}

._uxnsba {
    line-height: 18px !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
    display: -webkit-box !important;
    -webkit-line-clamp: 2 !important;
    -webkit-box-orient: vertical !important;
    height: 36px !important;
}

